# ruby-ptrace2

./: CMakeLists.txt  Makefile  README  bootstrap.c  gen_ptrace.rb  hello-loop.c  ptrace_template.rb
